# tp-firmware-sdk

./: .gitattributes  .gitignore  Changelog  Dockerfile  Makefile  README.md
docker/: build.sh
ptxproj/repo_src/common-header/: CMakeLists.txt  LICENSE  README.md  libcommonheader.pc.in
ptxproj/repo_src/common-header/inc/wc/: api_export.h  assertion.h  base64.h  compiler.h  exit.h  log.h  preprocessing.h  std_includes.h  structuring.h  trace.h
ptxproj/repo_src/common-header/src/: commonheader.c  commonheader.cpp
ptxproj/repo_src/common-header/test-src/wc_test/: test_Assertion.cpp  test_Assertion.h  test_Base64.cpp  test_Export.cpp  test_Log.cpp  test_Preprocessing.cpp  test_Preprocessing.h  test_StdIncludes.cpp  test_Structuring.cpp  test_StructuringClass.cpp  test_Trace.cpp
ptxproj/repo_src/daemon-utils/: CMakeLists.txt  LICENSE  libwagocrypto.pc.in  libwagologging.pc.in  libwagooptparsing.pc.in  libwagoprivileges.pc.in  libwtrace.pc.in
ptxproj/repo_src/daemon-utils/doc/: doxygen.config  introduction.md  main.dox
ptxproj/repo_src/daemon-utils/src/libwagocrypto/: aes256_gcm.cpp  aes256_gcm.hpp  crypto.cpp  key.cpp
ptxproj/repo_src/daemon-utils/src/libwagologging/: log.cpp  system_abstraction.hpp
ptxproj/repo_src/daemon-utils/src/libwagooptparsing/: get_opt_parser.cpp
ptxproj/repo_src/daemon-utils/src/libwagoprivileges/: group.cpp  privileges.cpp  user.cpp
ptxproj/repo_src/daemon-utils/src/libwtrace/: find_debug_fs.cpp  find_debug_fs.hpp  kernel_tracer.cpp  kernel_tracer.hpp  sal.hpp  sal_ktrace.cpp  sal_ktrace.hpp  stream_tracer.cpp  stream_tracer.hpp  trace.cpp
ptxproj/repo_src/daemon-utils/test-inc/mocks/: mock_journal.hpp  mock_sal_ktrace.hpp  mock_syslog.hpp  mock_tracer.hpp
ptxproj/repo_src/daemon-utils/test-src/common/: fail.cpp
ptxproj/repo_src/daemon-utils/test-src/libwagocrypto/: test_aes256_gcm.cpp  test_crypto.cpp  test_key.cpp
ptxproj/repo_src/daemon-utils/test-src/libwagologging/: test_default_log_functions.cpp  test_log_function_management.cpp
ptxproj/repo_src/daemon-utils/test-src/libwagooptparsing/: test_get_opt_parser.cpp
ptxproj/repo_src/daemon-utils/test-src/libwtrace/: test_kernel_tracer.cpp  test_stream_tracer.cpp  test_tracer_management.cpp  test_tracing.cpp
ptxproj/repo_src/wago-auth-service/: CMakeLists.txt  LICENSE  README.md  libauthserv.pc.in
ptxproj/repo_src/wago-auth-service/examples/resource_service/: mcs.php  mrs.php
ptxproj/repo_src/wago-auth-service/src/authd/: main.cpp
ptxproj/repo_src/wago-auth-service/src/common/: errno_utils.cpp  errno_utils.hpp  system_abstraction.hpp
ptxproj/repo_src/wago-auth-service/src/libauthserv/: auth_result.hpp  auth_service.cpp  auth_service_provider.cpp  authenticator.cpp  authenticator.hpp  authenticator_i.hpp  authorize.cpp  authorize.hpp  definitions.hpp  error_document.cpp  error_document.hpp  exception.cpp  group_management.cpp  group_management.hpp  log_authentication.hpp  oauth_error.cpp  oauth_error.hpp  oauth_token_handler.cpp  oauth_token_handler.hpp  pam_backend.cpp  pam_backend.hpp  paramd_backend.cpp  paramd_backend.hpp  password_backend_i.hpp  password_change.cpp  password_change.hpp  password_change_backend_i.hpp  response_helper.cpp  response_helper.hpp  response_helper_i.hpp  settings_store.cpp  settings_store.hpp  settings_store_i_ext.cpp  token.cpp  token.hpp  token_document.cpp  token_document.hpp  token_handler.cpp  token_handler.hpp  verify.cpp  (+5 more)
ptxproj/repo_src/wago-auth-service/test-inc/: fail.hpp
ptxproj/repo_src/wago-auth-service/test-inc/mocks/: mock_authenticator.hpp  mock_fcgi.hpp  mock_filesystem.hpp  mock_hostname.hpp  mock_oauth_token_handler.hpp  mock_pam.hpp  mock_password_backend.hpp  mock_password_change_backend.hpp  mock_request.hpp  mock_response.hpp  mock_response_helper.hpp  mock_settings_store.hpp  mock_system_clock.hpp  mock_systemd.hpp  mock_user_management.hpp
ptxproj/repo_src/wago-auth-service/test-src/common/: fail.cpp  log.cpp
ptxproj/repo_src/wago-auth-service/test-src/libauthserv/: test_auth_service_provider.cpp  test_authenticator.cpp  test_error_document.cpp  test_exceptions.cpp  test_group_management.cpp  test_html_escape.cpp  test_http_method.cpp  test_http_status_code.cpp  test_http_uri.cpp  test_oauth_token_handler.cpp  test_pam_backend.cpp  test_paramd_backend.cpp  test_process_authorize.cpp  test_process_password_change.cpp  test_process_token.cpp  test_process_verify.cpp  test_response_helper.cpp  test_service_request.cpp  test_settings_store.cpp  test_token_document.cpp  test_token_handler.cpp  test_vector_operations.cpp  test_verify_document.cpp
ptxproj/repo_src/wago-auth-service/www/auth/: auth.css  auth.js  confirmation.html.template  eslint.config.mjs  login.html.template  login.js  password_change.html.template  password_change.js  password_setup.html.template
ptxproj/repo_src/wdx-core/: CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  wdxcore.pc.in  wdxtest.pc.in  wdxwda.pc.in
ptxproj/repo_src/wdx-core/cmake/CodeCoverage/: CodeCoverageConfig.cmake
ptxproj/repo_src/wdx-core/inc/wago/: future.hpp
ptxproj/repo_src/wdx-core/src/libwdxcore/: authorized.cpp  authorized.hpp  base_parameter_provider.cpp  device_description_provider_i.hpp  device_extension_provider_i.hpp  impl.cpp  json_helpers.hpp  model_provider_i.hpp  parameter_exception.cpp  parameter_selector.cpp  parameter_service_backend_i.cpp  parameter_service_core.cpp  parameter_service_core.hpp  parameter_service_frontend_extended_i.hpp  parameter_service_i.hpp  parameter_value.cpp  provider_collection.hpp  requests.cpp  responses.cpp  serial_parameter_provider.cpp  serial_parameter_provider.hpp  status_codes.cpp  unauthorized.cpp
ptxproj/repo_src/wdx-core/src/libwdxtest/: fail.cpp  log.cpp  provider_smoke_test.cpp
ptxproj/repo_src/wdx-core/test-inc/: posix_sync.hpp  test_providers.hpp
ptxproj/repo_src/wdx-linux/: .project  CMakeLists.txt  LICENSE  README.md  libwdxlinuxosclient.pc.in  libwdxlinuxoscom.pc.in  libwdxlinuxosfile.pc.in  libwdxlinuxosserv.pc.in
ptxproj/repo_src/wdx-linux/doc/: doxygen.config  introduction.md  main.dox
(+2789 files in other folders)
